# ESI-DEV3-Labos

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  doxygen
.github/workflows/: .github.yml
common/: CMakeLists.txt
common/resources/: abs.cpp
common/src/: mathesi.c  mathesi.cpp  mathesi.h  mathesi.hpp  utilscpp.cpp  utilscpp.hpp
common/test/: mathesicpptest.cpp
i1/: CMakeLists.txt
i1/resources/: PrimeFactor.c  PrimeFactor.h  PrimeFactorization.c  PrimeFactorization.h  mathesi.c  td04.c  td04.h
i1/src/: main.c  primestat.c  primestat.h  statsample.c  statsample.h
i2/: CMakeLists.txt
i2/resources/: data.cpp  data.hpp  fraction.hpp  m_vector_incomplete.h  m_vector_incomplete_without_doc.h  random.hpp  sign.cpp  sign.hpp
i2/resources/random/: random.hpp
i2/src/: m_vector.h  main.cpp
td01/: CMakeLists.txt  doxygen
td01/src/: main.c  mathesi.c
td02/: CMakeLists.txt
td02/src/: main.c  tableaux.c  tableaux.h
td03/: CMakeLists.txt
td03/src/: main.c  str.c  str.h
td04/: CMakeLists.txt
td04/resources/: mathesi.h
td04/src/: PrimeFactor.c  PrimeFactor.h  PrimeFactorization.c  PrimeFactorization.h  main.c  td04.c  td04.h
td05/: CMakeLists.txt
td05/src/: main.c  slcircularlist.c  slcircularlist.h  slcircularlist_utility.c  slcircularlist_utility.h  slnode.c  slnode.h  slnode_utility.c  slnode_utility.h  value_t.h
td06/: CMakeLists.txt
td06/src/: main.cpp  mathesi.cpp  mathesi.h  utils.cpp  utils.h
td07/: CMakeLists.txt
td07/resources/: mathesicpp.hpp  random.hpp
td07/src/: main.cpp  td07.cpp  td07.h  td07.hpp
td08/: CMakeLists.txt
td08/resources/: data_fraction.cpp  data_fraction.h  fraction_constexpr_incomplete.h  fraction_incomplete.cpp  fraction_incomplete.h  random.hpp  sign_incomplete.h  tests-main.cpp  utilscpp.hpp
td08/src/: fraction.cpp  fraction.hpp  fraction_constexpr.hpp  main.cpp  sign.cpp  sign.hpp
td08/test/: fraction_all.cpp  fraction_constexprTest.cpp  fractiontest.cpp  signtest.cpp
td09/: CMakeLists.txt
td09/resources/: data.cpp  data.h  draw.h  item_incomplete.h  lotto_incomplete.h  parameter.h  pronostic_incomplete.h
td09/src/: draw.hpp  item.hpp  lotto.hpp  main.cpp  parameter.hpp  pronostic.hpp
